test/compile-fail/resolution/use/renamed-reentrant-tracing/expected.txt
error: unresolved item `d`
 --> top.rhdl:1:10
  |
1 | use a::b::d;
  |           ^ no `d` in `b`
